--- a/2.2.1. spring_hibernate/src/main/resources/db.properties
+++ b/2.2.1. spring_hibernate/src/main/resources/db.properties
@@ -1,10 +1,9 @@
 # MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring_hiber?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
-db.username=root
-db.password=root
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://localhost:5432/postgres
+db.username=postgres
+db.password=postgrespassword
 
 # Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
-
+hibernate.show_sql=debug
+hibernate.hbm2ddl.auto=create
